[fix] suppressUnsupportedCompileSdk=34 warning was added

--- a/OpenYourWorldAndroid/gradle.properties
+++ b/OpenYourWorldAndroid/gradle.properties
@@ -21,3 +21,14 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+#We recommend using a newer Android Gradle plugin to use compileSdk = 34
+#This Android Gradle plugin (8.1.0) was tested up to compileSdk = 33 (and compileSdkPreview = "UpsideDownCakePrivacySandbox").
+#You are strongly encouraged to update your project to use a newer
+#Android Gradle plugin that has been tested with compileSdk = 34.
+#If you are already using the latest version of the Android Gradle plugin,
+#you may need to wait until a newer version with support for compileSdk = 34 is available.
+#To suppress this warning, add/update
+#android.suppressUnsupportedCompileSdk=34
+#to this project's gradle.properties.
+android.suppressUnsupportedCompileSdk=34
